# SENDQSARpy

./: .gitignore  README.md  import sendqsarpy.py  pyproject.toml
docs/: .buildinfo  faq.html  genindex.html  get_bw_score.html  get_compile_data.html  get_lb_score.html  get_livertobw_score.html  get_mi_score.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: get_bw_score.rst.txt  get_compile_data.rst.txt  get_lb_score.rst.txt  get_livertobw_score.rst.txt  getting_started.rst.txt
scripts/: amin_test.py  debug_test.py  get_bw_score_unn_code_ .py  get_mi_score.py  get_mi_score_unn_code_.py  one__.py  prepare_data_and_tune_hyperparameters.py  pycharm_amin_test.py  t_col_harmonied.py  t_get_bw_score.py  t_get_liver_om_lb_mi_tox_score_list.py  test.py  testing_fake_sqlite.py  testing_fake_xpt.py
scripts/needed_function/: get_col_harmonized_scores_df .py
scripts/old_test/: debug_test.py  fresh_test.py  get_bw_score.py  get_compile_data.py  get_compile_data_unn_code_ - Copy.py  get_lb_score_unn_code_.py  get_mi_score.py  (+2 more)
sendqsarpy/: __init__.py  get_auc_curve.py  get_bw_score.py  get_col_harmonized_scores_df.py  get_compiledata.py  get_lb_score.py  get_liver_om_lb_mi_tox_score_list.py  get_liver_om_lb_mi_tox_score_list_1.py  get_liver_om_lb_mi_tox_score_list_raw1.py  get_livertobw_score.py  get_mi_score.py  get_rfData_and_best_m.py  get_treatment_group_amin.py  prepare_data_and_tune_hyperparameters.py
source/: conf.py  get_mi_score.rst  index.rst  usage.rst
tests/: test_get_compiledata.py
(+1 files in other folders)
