[tool.poetry]
name = "sendqsarpy"
version = "0.1.0"
description = ""
authors = ["Md Aminul Islam Prodhan <aminuldu07@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
# python = "^3.12"
python = ">=3.11,<4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


